fix: swagger documentation and fix list posts logic
